Converted to TWS API 9.79

--- a/IBFetchData/App.config
+++ b/IBFetchData/App.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="IBFetchData.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="IBFetchData.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <connectionStrings>
@@ -10,11 +10,11 @@
             connectionString="Data Source=(localdb)\v11.0;Initial Catalog=E:\FINANCE\DATABASE\OPTIONS.MDF;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="IBFetchData.Properties.Settings.optionsConnectionString"
-            connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=E:\Finance\Database\options.mdf;Integrated Security=True;Connect Timeout=30"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\Finance\Database\options.mdf;Initial Catalog=Options;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <userSettings>
         <IBFetchData.Properties.Settings>
